--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/cargo_technician.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/cargo_technician.yml
@@ -56,7 +56,7 @@
     back: ClothingBackpackDuffelCargoFilled
 
 # OuterClothing
-- type: loadout
+- type: itemLoadout
   id: CargoTechnicianWintercoat
   equipment: CargoTechnicianWintercoat
 
@@ -66,7 +66,7 @@
     outerClothing: ClothingOuterWinterCargo
 
 # Shoes
-- type: loadout
+- type: itemLoadout
   id: CargoWinterBoots
   equipment: CargoWinterBoots
 
