fix: fix loadout prototype

--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/passenger.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/passenger.yml
@@ -40,7 +40,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpskirtColorGrey
 
-- type: loadout
+- type: itemLoadout
   id: AncientJumpsuit
   equipment: AncientJumpsuit
   effects:
