fix: fix jukebox

--- a/Resources/Prototypes/_White/Fluff/sponsor.yml
+++ b/Resources/Prototypes/_White/Fluff/sponsor.yml
@@ -269,7 +269,7 @@
 
 - type: sponsorLoadout
   id: JukeboxLoadout
-  entity: Jukebox
+  entity: Boombox
   sponsorOnly: true
 
 - type: sponsorLoadout
