--- a/Resources/Prototypes/Loadouts/Jobs/Engineering/atmospheric_technician.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Engineering/atmospheric_technician.yml
@@ -73,3 +73,12 @@
   id: WhiteShoes
   equipment:
     shoes: ClothingShoesColorWhite
+
+# PDA
+- type: itemLoadout # WD
+  id: AtmosphericTechnicianPDA
+  equipment: AtmosphericTechnicianPDA
+- type: startingGear
+  id: AtmosphericTechnicianPDA
+  equipment:
+    id: AtmosPDA
