--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -92,3 +92,13 @@
   id: ChiefMedicalOfficerWintercoat
   equipment:
     outerClothing: ClothingOuterWinterCMO
+
+# PDA
+
+- type: itemLoadout # WD
+  id: ChiefMedicalOfficerPDA
+  equipment: ChiefMedicalOfficerPDA
+- type: startingGear
+  id: ChiefMedicalOfficerPDA
+  equipment:
+    id: CMOPDA
