--- a/Resources/Prototypes/Loadouts/Jobs/Security/security_cadet.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Security/security_cadet.yml
@@ -2,7 +2,6 @@
 - type: itemLoadout
   id: RedJumpsuit
   equipment: RedJumpsuit
-
 - type: startingGear
   id: RedJumpsuit
   equipment:
@@ -11,8 +10,16 @@
 - type: itemLoadout
   id: RedJumpskirt
   equipment: RedJumpskirt
-
 - type: startingGear
   id: RedJumpskirt
   equipment:
     jumpsuit: ClothingUniformJumpskirtColorRed
+
+# id
+- type: itemLoadout
+  id: SecurityCadetPDA
+  equipment: SecurityCadetPDA
+- type: startingGear
+  id: SecurityCadetPDA
+  equipment:
+    id: SecurityCadetPDA
