--- a/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
@@ -112,15 +112,6 @@
 
 # Outer clothing
 - type: itemLoadout
-  id: CaptainOuterClothing
-  equipment: CaptainOuterClothing
-
-- type: startingGear
-  id: CaptainOuterClothing
-  equipment:
-    outerClothing: ClothingOuterArmorCaptainCarapace
-
-- type: itemLoadout
   id: CaptainWintercoat
   equipment: CaptainWintercoat
 
@@ -128,3 +119,13 @@
   id: CaptainWintercoat
   equipment:
     outerClothing: ClothingOuterWinterCap
+
+# PDA
+
+- type: itemLoadout # WD
+  id: CaptainPDA
+  equipment: CaptainPDA
+- type: startingGear
+  id: CaptainPDA
+  equipment:
+    id: CaptainPDA
