--- a/Resources/Prototypes/Loadouts/Jobs/Medical/medical_intern.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/medical_intern.yml
@@ -16,3 +16,13 @@
   id: WhiteJumpskirt
   equipment:
     jumpsuit: ClothingUniformJumpskirtColorWhite
+
+# PDA
+
+- type: itemLoadout # WD
+  id: MedicalInternPDA
+  equipment: MedicalInternPDA
+- type: startingGear
+  id: MedicalInternPDA
+  equipment:
+    jumpsuit: MedicalInternPDA
