--- a/Resources/Prototypes/Loadouts/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/head_of_personnel.yml
@@ -123,3 +123,13 @@
   id: HoPPDA
   equipment:
     gloves: HoPPDA
+
+# Ears
+- type: itemLoadout # WD
+  id: HoPEars
+  equipment: HoPEars
+
+- type: startingGear
+  id: HoPEars
+  equipment:
+    id: ClothingHeadsetCommand
