--- a/Resources/Maps/White/WonderBox.yml
+++ b/Resources/Maps/White/WonderBox.yml
@@ -74168,7 +74168,7 @@ entities:
     - type: Transform
       pos: 66.5,-59.5
       parent: 2
-- proto: CultBola
+- proto: Bola
   entities:
   - uid: 15785
     components:
